# numpydoc-lint

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/numpydoc_lint/: __main__.py  _config.py  _error.py  _model.py  cmd.py  numpydoc.py  test.py  validate.py
src/numpydoc_lint/check/: __init__.py  _base.py  _es.py  _ex.py  _gl.py  _global.py  _parameters.py  _pr.py  _returns.py  _rt.py  _ss.py  _yd.py
tests/: conftest.py
tests/numpydoc_lint/: test_GL.py  test_PR.py  test_checks.py  test_global.py  test_parameters.py  test_parser.py  test_summary.py
tests/numpydoc_lint/common/: common.py
tools/: generate_error_list.py
